# julius-tex

./: .gitignore  CLOSING_NOTES.md  IMPLEMENTACAO_COMPLETA.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MINIMAX_INDEX.md  NVIDIA_INTEGRATION.md  NVIDIA_QUICKSTART.md  NVIDIA_SETUP.md  PROMPT.sys.example  README.md  README_MINIMAX.md  README_NVIDIA_IMPLEMENTATION.md  TOKENS.example  examples_nvidia_provider.py  julius_20260312_125903.md  pyproject.toml  requirements.txt
BUGS/: dry-run.md  github-provider-models.md  minimax.md  time-out-minimax.md
TESTE/: Best model for research.md  Leanstral.md  P&D com a FGV EMAp.md  PROMPT.sys  alberto.md  bernardo.md  dario.md  diego.md  guilherme.md  julio.md  julius_20260309_181847.md  julius_20260311_162647.md  julius_20260312_162857.md  julius_20260312_163729.md  julius_20260319_124752.md  max.md  melhorias.md  sys-prompt.md
TESTE/turbo-quant/: Como-usar-rtx3090-em-windows.md
archive/: grok-multi.md  lm-studio-tests.md
archive/minimax/: MINIMAX_CHECKLIST.md  MINIMAX_INDEX.md
julius_code/: __init__.py  config.py  history.py  main.py  ui.py
julius_code/models/: DeepSeek-V3.2-Speciale.md  Kimi-K2-Thinking.md
julius_code/providers/: azureaifoundry.md  grok_max_tokens.md  mistral_max_tokens.md  openai_compat.py  perplxty_max_tokens.md
julius_tex/: __init__.py  config.py  history.py  main.py  ui.py
julius_tex/models/: Leanstral.md
julius_tex/providers/: __init__.py  base.py  claude_max_tokens.md  claude_provider.py  github_max_tokens.md  (+9 more)
tests/: test_claude_provider.py  test_nvidia_provider.py  test_provider_selection.py
