[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "julius-code"
version = "0.1.0"
description = "Interactive AI chat assistant for your codebase — CLI tool that reads project context from Markdown files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "chat", "cli", "code-assistant", "llm"]
dependencies = [
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.0",
    "anthropic>=0.45.0",
    "mistralai>=1.0.0",
    "openai>=1.40.0",
    "httpx>=0.27.0",
]

[project.scripts]
julius-code = "julius_code.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["julius_code*"]
